[gd_scene load_steps=4 format=3 uid="uid://bg2tbkwl37akc"]

[ext_resource type="FontFile" uid="uid://b1cjkihd4tofe" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_7jr6c"]
[ext_resource type="Script" path="res://scripts/tela_inicial.gd" id="1_66xlx"]

[sub_resource type="LabelSettings" id="LabelSettings_rdgwo"]
font = ExtResource("1_7jr6c")
font_size = 128

[node name="TelaInicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_66xlx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MadeBy" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -26.0
offset_right = 41.0
grow_horizontal = 2
grow_vertical = 0
text = "Feito por Alan
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -436.0
offset_top = -204.5
offset_right = 436.0
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PONG"
label_settings = SubResource("LabelSettings_rdgwo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PvP" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7jr6c")
theme_override_font_sizes/font_size = 24
text = "PvP"

[node name="PvE" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7jr6c")
theme_override_font_sizes/font_size = 24
text = "PvE"

[node name="Controles" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7jr6c")
theme_override_font_sizes/font_size = 24
text = "Controles"

[node name="Sair" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7jr6c")
theme_override_font_sizes/font_size = 24
text = "Sair"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PvP" to="." method="_on_pv_p_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/PvE" to="." method="_on_pv_e_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
